fixed sample text on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -77,7 +77,7 @@ body {
 
 .home-content {
   height: 100%; /* this is a child of main-content, so why doesn't this work? */
-  font-size: 3rem;
+  font-size: 2.4rem;
   background-color: rgba(13, 47, 196, 0.6);
   padding: 20px;
   padding-bottom: 0px;
